@@ -810,9 +810,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   if (getCursor().getParentTreeCursor().getValue() instanceof J.MethodDeclaration) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n2"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n2"));
                   } else if (!(getCursor().getParentTreeCursor().getParentTreeCursor().getValue() instanceof J.ClassDeclaration)) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n1"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -1005,7 +1005,7 @@ class RenameVariableTest implements RewriteTest {
                 @Override
                 public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                     if (getCursor().getParentTreeCursor().getValue() instanceof J.MethodDeclaration) {
-                        doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n1"));
+                        doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
                     }
                     return super.visitVariableDeclarations(multiVariable, ctx);
                 }
@@ -1042,9 +1042,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   J target = getCursor().getParentTreeCursor().getParentTreeCursor().getValue();
-                  if ("hidden".equals(multiVariable.getVariables().get(0).getSimpleName()) &&
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
                     target instanceof J.ClassDeclaration && ((J.ClassDeclaration) target).getSimpleName().equals("Base")) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "changed"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -1137,9 +1137,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   J target = getCursor().getParentTreeCursor().getParentTreeCursor().getValue();
-                  if ("hidden".equals(multiVariable.getVariables().get(0).getSimpleName()) &&
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
                     target instanceof J.ClassDeclaration && ((J.ClassDeclaration) target).getSimpleName().equals("Extended")) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "changed"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -1232,9 +1232,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   J target = getCursor().getParentTreeCursor().getValue();
-                  if ("hidden".equals(multiVariable.getVariables().get(0).getSimpleName()) &&
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
                     target instanceof J.MethodDeclaration) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "changed"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -1327,10 +1327,10 @@ class RenameVariableTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).isField(getCursor()) || multiVariable.getPrefix().getComments().isEmpty()) {
+                  if (multiVariable.getVariables().getFirst().isField(getCursor()) || multiVariable.getPrefix().getComments().isEmpty()) {
                       return multiVariable;
                   }
-                  doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n1"));
+                  doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
           })),
@@ -1384,7 +1384,7 @@ class RenameVariableTest implements RewriteTest {
                   if (getCursor().getParent() != null && getCursor().getParent().getValue() instanceof J.ClassDeclaration) {
                       for (Statement statement : block.getStatements()) {
                           if (statement instanceof J.VariableDeclarations) {
-                              doAfterVisit(new RenameVariable<>(((J.VariableDeclarations) statement).getVariables().get(0), "n1"));
+                              doAfterVisit(new RenameVariable<>(((J.VariableDeclarations) statement).getVariables().getFirst(), "n1"));
                           }
                       }
                   }
